@@ -30,6 +30,7 @@ struct cpu_list
 static struct cpu_list cpu_list[] = {
       {"falkor",	0x510FC000},
       {"thunderxt88",	0x430F0A10},
+      {"ares",		0x411FD0C0},
       {"generic", 	0x0}
 };
 
